--- a/django_server/dublin_bus/users/templates/users/account.html
+++ b/django_server/dublin_bus/users/templates/users/account.html
@@ -17,8 +17,22 @@
           <!-- <p class="text-secondary">Leap card Balance: {{ user.profile.leap_balance }}</p> -->
           <p class="text-secondary">Leap card Balance: {{ balance }}</p>
         </div>
+    </div>
+    {% if is_registered  %}
+    <legend class="border-bottom mb-4"> Account Information</legend>
+    <div class="card">
+      <div class="card-body">Card Balance: {{ balance }}</div>
+      <div class="card-body">Card Number: {{ profile.leap_card_number }}</div>
+      <div class="card-body">Card Status: {{ profile.leap_card_status }}</div>
+      <div class="card-body">Card type: {{ profile.leap_card_type }}</div>
+      <div class="card-body">Credit Status: {{ profile.leap_credit_status }}</div>
+      <div class="card-body">Auto top-up: {{ profile.leap_auto_topup }}</div>
+      <div class="card-body">Expiry date: {{ profile.leap_expiry_date }}</div>
+      <div class="card-body">Card Issue Date: {{ profile.leap_issue_date }}</div>
 
     </div>
+    {% endif %}
+    
   </div>
         <!-- new forms here -->
         <div class="col-sm">
