--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -94,7 +94,7 @@
     <div id="twitter" class="container tab-pane fade">
       <div class="card col-md-12" id="twitter-card">
       <h3 class="card-title">Dublin Bus Twitter</h3>
-        Tweet tweet bitch
+        Tweet tweet
       </div>   
      </div>
   </div>
