--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -62,7 +62,7 @@
         var input1 = document.getElementById("searchTextField_start").value;
         var input2 = document.getElementById("searchTextField_destination").value;
         var input3 = document.getElementById("datetimepicker4").value;
-        document.getElementById("test").innerHTML = "The starting destination is: " + input1 + " and the destination is " + input2 + " and the time and date is " + input3;
+        // document.getElementById("test").innerHTML = "The starting destination is: " + input1 + " and the destination is " + input2 + " and the time and date is " + input3;
       }
       </script>
     <div><div id="map"> hello </div></div>
